[tool.poetry]
name = "linearregressionbasic01"
version = "0.1.0"
description = "Basics of Linear Regression 01"
authors = ["Vatsal Raicha <vatsalraicha@outlook.com>"]
readme = "README.md"
packages = [{include = "linearregressionbasic01", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.0"
projectpro = "^0.0.29"


[tool.poetry.dev-dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
